_sass/_header.scss
.site-header {
  padding-top: $spacing;
  padding-bottom: $spacing;
  border-bottom: 1px solid $color-lo;
  margin-bottom: $spacing;

  .wrapper {
    @extend %row;
    display: flex;

    .left,
    .right {
      display: flex;
      flex-direction: column;
      justify-content: center;
    }

    .left {
      container: header-left / inline-size;

      .links {
        display: flex;
        flex-direction: column;
        gap: 0.4em;
        list-style-position: inside;
        padding-left: 0;

        @container header-left (width > 24em) {
          flex-direction: row;
        }

        li {
          margin-bottom: 0;
        }
      }
    }

    svg {

      g,
      path {
        transition: all 0.2s ease-in-out;
        transform-origin: center center;
      }

      &:hover {
        .cathedral {
          fill: $color-ac;
        }

        .cogwheel {
          transform: rotate(-2deg);
        }
      }
    }

    @media screen and (max-width: 20rem) {
      flex-direction: column-reverse;

      svg {
        display: block;
        margin-left: auto;
        margin-right: auto;
        max-height: 5em;
      }
    }

    @media screen and (min-width: 20.0001rem) {
      .left {
        flex: 1;
      }

      .right {
        margin-left: $spacing;
      }
    }
  }
}

.site-title {
  word-wrap: break-word;
  font-size: 2rem;

  @media screen and (max-width: 25rem) {
    font-size: 1.5rem;
  }
}

